--- a/site/config.toml
+++ b/site/config.toml
@@ -1,3 +1,8 @@
 baseurl = "/"
 languageCode = "en-us"
-title = "Homepage"
+title = "Military Pay Charts, Benefits and More"
+[permalinks]
+  post = "/:slug/"
+  blog = "/:slug/"
+  page = "/:slug/"
+
