--- a/site/config.toml
+++ b/site/config.toml
@@ -2,9 +2,15 @@ baseurl = "https://www.militaryhacks.com/"
 languageCode = "en-us"
 title = "Military Pay Charts, Benefits and More"
 [permalinks]
-  post = "/:slug/"
   blog = "/:slug/"
   page = "/:slug/"
+  bases = "/:slug/"
+  army = "/:slug/"
+  air-force = "/:slug/"
+  marines = "/:slug/"
+  navy = "/:slug/"
+  tricare = "/:slug/"
+  veterans = "/:slug/"
 [sitemap]
   changefreq = "monthly"
   filename = "sitemap.xml"
